@@ -1,5 +1,13 @@
 2014-07-11  Niels Möller  <nisse@lysator.liu.se>
 
+	* ecc-dup-eh.c (ecc_dup_eh, ecc_dup_eh_itch): New file, new functions.
+	* ecc-eh-to-a.c (ecc_eh_to_a, ecc_eh_to_a_itch): New file, new
+	functions.
+	* ecc.h: Declare new functions.
+	* ecc-internal.h (ECC_EH_TO_A_ITCH, ECC_DUP_EH_ITCH): New macros.
+	* Makefile.in (hogweed_SOURCES): Added ecc-dup-eh.c and
+	ecc-eh-to-a.c.
+
 	* ecc-internal.h (struct ecc_curve): New constant edwards_root.
 	* ecc-192.c (nettle_secp_192r1): Updated accordingly, additional
 	NULL pointer.
